2013-09-11  P. J. McDermott  <pj@pehjota.net>

	* sysdeps/unix/Makefile ($(objpfx)stub-syscalls.c): Don't use
	${Bash-specific parameter/pattern/string} parameter expansion.
	* sysdeps/unix/make-syscalls.sh: Likewise.

2013-09-27  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/stackguard-macros.h: New file.

2013-09-26  Ondřej Bílka  <neleai@seznam.cz>

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Update.
	* sysdeps/x86_64/multiarch/ifunc-impl-list.c: Remove strrchr ifunc.
	* sysdeps/x86_64/multiarch/strend-sse4.S Remove.
	* sysdeps/x86_64/multiarch/strrchr-sse2-no-bsf.S Likewise.
	* sysdeps/x86_64/multiarch/strrchr.S: Likewise.
	* sysdeps/x86_64/strrchr.S (strrchr): Use optimized implementation.

2013-09-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/stackguard-macros.h (POINTER_CHK_GUARD:
	Fix thread ID register.

2013-09-25  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/sched.h-data [XPG3 || XPG4]: Disable whole file.
	[POSIX || UNIX98]: Require rather than permitting all symbols from
	<time.h>.
	[POSIX || UNIX98] (sched_ss_low_priority): Do not specify optional
	element of struct sched_param.
	[POSIX || UNIX98] (sched_ss_repl_period): Likewise.
	[POSIX || UNIX98] (sched_ss_init_budget): Likewise.
	[POSIX || UNIX98] (sched_ss_max_repl): Likewise.
	[POSIX || UNIX98] (SCHED_SPORADIC): Do not specify optional
	constant.

2013-09-24  Olivier Langlois  <olivier@olivierlanglois.net>

	* stdio-common/tst-long-dbl-fphex.c (do_test): Fix swprintf length
	argument calculation.

2013-09-24  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/pthread.h-data [POSIX] (PTHREAD_MUTEX_INITIALIZER):
	Expect macro.
	[POSIX] (pthread_attr_t): Do not require type.
	[POSIX] (pthread_cond_t): Likewise.
	[POSIX] (pthread_condattr_t): Likewise.
	[POSIX] (pthread_key_t): Likewise.
	[POSIX] (pthread_mutex_t): Likewise.
	[POSIX] (pthread_mutexattr_t): Likewise.
	[POSIX] (pthread_once_t): Likewise.